--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 layout: default
 ---
 
-<div class="home">
-  <p>Work In Progress.</p>
+<div class="FrontPage">
+
+<table>
+	<tr>
+		<td>
+			<p> Test </p>
+			<p> Another Test </p>
+		</td>
+	</tr>
+</table>
+
 </div>
