Add CSS repository.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: default
 
 <table>
 	<tr>
-		<td border="0">
-			<p> Test </p>
+		<td id="presentation_table" border="0">
+			<h1> Blog in construction </h1>
 			<p> Another Test </p>
 		</td>
 	</tr>
