Try to add color and to add a margin.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="FrontPage">
 
-<table>
+<table margin-left:20%;>
 	<tr>
 		<td id="presentation_table" border="0">
 			<h1> Blog in construction </h1>
