--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@ layout: default
 
 <table style="margin-left:20%">
 	<tr>
-		<td id="presentation_table" border="0">
+		<td>
 			<h1> Blog in construction </h1>
 			<p> Another Test </p>
 		</td>
 	</tr>
+	<tr>
+		<td>
+			<h1> I have absolutely no idea of what to write here </h1>
+			<p> But I write thing, just to see how it looks... </p>
+		</td>
+	</tr>
 </table>
+
+<p> Hopefully this is a blog that is not well indexed by Google and nobody will see it.^^ </p>
+
+<p> I think I will delete the picture in the header.  </p>
 
 </div>
