--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 ---
 <div class="Home" id="content">
 
+<img src="{{ site.url | append: site.baseurl }}/images/image1.jpg" style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top;">
+
 <table style="margin-left:20%">
 	<tr>
 		<td>
@@ -19,7 +21,5 @@ layout: default
 </table>
 
 <p> Hopefully this is a blog that is not well indexed by Google and nobody will see it.^^ </p>
-
-<p> I think I will delete the picture in the header.  </p>
 
 </div>
