Fix issue with margin. Add a presentation.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ layout: default
 	</tr>
 </table>
 
-<p> Hopefully this is a blog that is not well indexed by Google and nobody will see it.^^ </p>
+<p>Hello,</p>
+<p> I am a bioinformatic engineer working in hte <a href="http://www.irisa.fr/dyliss/">DYLISS team</a>.
+	My work focuses on metabolic network, <i>ab initio</i> inference of metabolic pathways and classification of enzymes in family.</p>
+<p> In 2015 I obtained a Master Degree in Behavioural Biology and in 2017 I obtained a Master Degree in Bioinformatic.</p>
 
 </div>
