Change text position.

--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@ layout: default
 <table style="margin-left:20%">
 	<tr>
 		<td>
-			<h1> Blog in construction </h1>
-			<p> Another Test </p>
+			Blog in construction
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<h1> I have absolutely no idea of what to write here </h1>
-			<p> But I write thing, just to see how it looks... </p>
+			I have absolutely no idea of what to write here
 		</td>
 	</tr>
 </table>
 
-<p>Hello,</p>
+
+<p >Hello,</p>
 <p> I am a bioinformatic engineer working in hte <a href="http://www.irisa.fr/dyliss/">DYLISS team</a>.
 	My work focuses on metabolic network, <i>ab initio</i> inference of metabolic pathways and classification of enzymes in family.</p>
 <p> In 2015 I obtained a Master Degree in Behavioural Biology and in 2017 I obtained a Master Degree in Bioinformatic.</p>
