--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="Home" id="content">
 
-<img src="{{ site.url | append: site.baseurl }}/images/image1.jpg" style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top;">
+<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/image1.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 
 <table style="margin-left:20%">
 	<tr>
