--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="Home" id="content">
 
-<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/profile.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
+<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/profile.JPG"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 
 <p >Hello,</p>
 <p> I am a bioinformatic engineer working in hte <a href="http://www.irisa.fr/dyliss/">DYLISS team</a>.
