--- a/publications.html
+++ b/publications.html
@@ -6,11 +6,15 @@ permalink: publications/
 <div class="Publications" id="content">
 
 	<h1 class="page-heading">Publications</h1>
+	<p> My preprint (we all have a beginning) is also listed on my <a href='https://scholar.google.fr/citations?user=DGcD6P0AAAAJ&hl=fr'>Google Scholar profile</a>.</p>
 		<h2>Preprint</h2>
-			<p> Computational analysis of the Plasmodiophora brassicae genome: mitochondrial sequence description and metabolic pathway database design.
-
-				Stephanie Daval, Arnaud Belcour, Kevin Gazengel, Ludovic Legrand, Jerome Gouzy, Ludovic Cottret, Lionel Lebreton, Yoann Aigu, Christophe Mougel, Maria Manzanares-Dauleux.
-
-				<a href='https://doi.org/10.1101/335406'>Preprint at bioRxiv</a></p>
+			<ul>
+				<li>
+					<p> Computational analysis of the Plasmodiophora brassicae genome: mitochondrial sequence description and metabolic pathway database design. <br>
+						Stephanie Daval, Arnaud Belcour, Kevin Gazengel, Ludovic Legrand, Jerome Gouzy, Ludovic Cottret, Lionel Lebreton, Yoann Aigu, Christophe Mougel and Maria Manzanares-Dauleux. <br>
+						<a href='https://doi.org/10.1101/335406'>Preprint at bioRxiv</a>.
+					</p>
+				</li>
+			</ul>
 
 </div>
