--- a/pages/publications.html
+++ b/pages/publications.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Publications
-permalink: publications/
+permalink: pages/publications/
 ---
 <div class="Publications" id="content">
 
