Change liasis into pbsea.

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -14,7 +14,7 @@ permalink: pages/tools/
 					</p>
 				</li>
 				<li>
-					<p><a href='https://github.com/ArnaudBelcour/liasis'>liasis</a>: Pandas-based Single Enrichment Analysis.<br>
+					<p><a href='https://github.com/ArnaudBelcour/pbsea'>pbsea</a>: Pandas-based Single Enrichment Analysis.<br>
 						A little package to compute enrichment analysis on pandas dataframe.<br>
 					</p>
 				</li>
