--- a/pages/bios/bioeng.html
+++ b/pages/bios/bioeng.html
@@ -1,9 +1,9 @@
 ---
-layout: bio_pages
-title: Bio_eng
-permalink: pages/bios/bio_eng
+layout: biopages
+title: Bioeng
+permalink: pages/bios/bioeng
 ---
-<div class="Bio_eng" id="content">
+<div class="Bioeng" id="content">
 	<h2>Test paragraph</h2>
 		<ul>
 			<li>
