--- a/pages/cv/2017_cdd.html
+++ b/pages/cv/2017_cdd.html
@@ -1,13 +1,13 @@
 ---
 layout: cvpages
 title: Bioinformatic engineer
-permalink: pages/cv/2017cdd
+permalink: pages/cv/2017_cdd
 ---
-<div class="2017cdd" id="content">
+<div id="content">
 	<h2>Metabolic Network Reconstruction</h2>
 		<ul>
 			<li>
-				<p> Working on Genome-Scale MEtabolic Network Reconstruction.
+				<p>WIP
 				</p>
 			</li>
 		</ul>
