--- a/pages/cv/2014_internship.html
+++ b/pages/cv/2014_internship.html
@@ -5,6 +5,7 @@ permalink: pages/cv/2014_internship
 ---
 <div id="content">
 	<h2>Water pollution and nudges</h2>
+		<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/nudge_water.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<li>
 				<p>WIP
