Fix link aphid picture.

--- a/pages/cv/2016_internship.html
+++ b/pages/cv/2016_internship.html
@@ -5,7 +5,7 @@ permalink: pages/cv/2016_internship
 ---
 <div id="content">
 	<h2>RDF data and SPARQL queries on aphid data</h2>
-	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/aphid.JPG"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
+	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/aphid.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<li>
 				<p>WIP
