--- a/pages/cv/2015_internship.html
+++ b/pages/cv/2015_internship.html
@@ -5,7 +5,7 @@ permalink: pages/cv/2015_internship
 ---
 <div id="content">
 	<h2>Social and vocal convergence in european starling</h2>
-	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/sturnus_vulgaris.JPG"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
+	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/sturnus_vulgaris.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<li>
 				<p>WIP
