--- a/pages/cv/2017_cdd.html
+++ b/pages/cv/2017_cdd.html
@@ -5,6 +5,7 @@ permalink: pages/cv/2017_cdd
 ---
 <div id="content">
 	<h2>Metabolic Network Reconstruction</h2>
+	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/algae.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<li>
 				<p>WIP
