Add new preprint. Add tools (pathmodel and syntax highlight).

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -14,10 +14,23 @@ permalink: pages/tools/
 					</p>
 				</li>
 				<li>
+					<p><a href='https://gitlab.inria.fr/DYLISS/PathModel'>pathmodel</a>.<br>
+						A tool to infer ab initio reaction using known reactions.<br>
+					</p>
+				</li>
+				<li>
 					<p><a href='https://github.com/ArnaudBelcour/pbsea'>pbsea</a>: Pandas-based Single Enrichment Analysis.<br>
 						A little package to compute enrichment analysis on pandas dataframe.<br>
 					</p>
 				</li>
 			</ul>
-
+			<h2>Syntax Highlight</h2>
+			<ul>
+				<li>
+					<p><a href='https://github.com/ArnaudBelcour/asp-syntax-highlight'>asp-syntax-highlight</a>.<br>
+						A syntax highlighter for Answer Set Programming on Visual Studio Code.<br>
+						The extenstion is available on the <a href='https://marketplace.visualstudio.com/items?itemName=abelcour.asp-syntax-highlight'>VS Code market</a>.
+					</p>
+				</li>
+			</ul>
 </div>
