--- a/pages/publications.html
+++ b/pages/publications.html
@@ -6,13 +6,19 @@ permalink: pages/publications/
 <div class="Publications" id="content">
 
 	<h1 class="page-heading">Publications</h1>
-	<p> My preprint (we all have a beginning) is also listed on my <a href='https://scholar.google.fr/citations?user=DGcD6P0AAAAJ&hl=fr'>Google Scholar profile</a>.</p>
+	<p> My publications are also listed on my <a href='https://scholar.google.fr/citations?user=DGcD6P0AAAAJ&hl=fr'>Google Scholar profile</a>.</p>
 		<h2>Preprint</h2>
 			<ul>
 				<li>
 					<p> Computational analysis of the Plasmodiophora brassicae genome: mitochondrial sequence description and metabolic pathway database design. <br>
 						Stephanie Daval, Arnaud Belcour, Kevin Gazengel, Ludovic Legrand, Jerome Gouzy, Ludovic Cottret, Lionel Lebreton, Yoann Aigu, Christophe Mougel and Maria Manzanares-Dauleux. <br>
 						<a href='https://doi.org/10.1101/335406'>Preprint at bioRxiv</a> (2018).
+					</p>
+				</li>
+				<li>
+					<p> Inferring biochemical reactions and metabolite structures to cope with metabolic pathway drift. <br>
+						Arnaud Belcour, Jean Girard, Méziane Aite, Ludovic Delage, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov.
+						<a href='https://doi.org/10.1101/462556 '>Preprint at bioRxiv</a> (2018).
 					</p>
 				</li>
 			</ul>
