Update css style of bio pages.

--- a/pages/cv/2015_internship.html
+++ b/pages/cv/2015_internship.html
@@ -3,13 +3,12 @@ layout: cvpages
 title: M2 Behavioural Biology Internship
 permalink: pages/cv/2015_internship
 ---
-<div id="content">
+<div class="cv_content">
 	<h2>Social and vocal convergence in european starling</h2>
 	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/sturnus_vulgaris.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
-			<li>
-				<p>WIP
-				</p>
-			</li>
+			<p>
+				WIP
+			</p>
 		</ul>
 </div>
