--- a/pages/cv/2014_internship.html
+++ b/pages/cv/2014_internship.html
@@ -3,13 +3,12 @@ layout: cvpages
 title: M1 Behavioural Biology Internship
 permalink: pages/cv/2014_internship
 ---
-<div id="content">
+<div class="cv_content">
 	<h2>Water pollution and nudges</h2>
 		<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/nudge_water.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
-			<li>
-				<p>WIP
-				</p>
-			</li>
+			<p>
+				Development of an experience on water quality.
+			</p>
 		</ul>
 </div>
