Update mpwt link. Delete gitlab inria link.

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -9,7 +9,7 @@ permalink: pages/tools/
 		<h2>Python package</h2>
 			<ul>
 				<li>
-					<p><a href='https://gitlab.inria.fr/DYLISS/mpwt'>mpwt</a>: Pathway-Tools multiprocessing package.<br>
+					<p><a href='https://github.com/AuReMe/mpwt'>mpwt</a>: Pathway-Tools multiprocessing package.<br>
 						A little package to launch multiple runs of Pathway-Tools on different genomes, using genbank files.<br>
 					</p>
 				</li>
