Remove preprint and tools.

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -14,13 +14,8 @@ permalink: pages/tools/
 					</p>
 				</li>
 				<li>
-					<p><a href='https://gitlab.inria.fr/DYLISS/PathModel'>pathmodel</a>.<br>
-						A tool to infer ab initio reaction using known reactions.<br>
-					</p>
-				</li>
-				<li>
-					<p><a href='https://github.com/ArnaudBelcour/pbsea'>pbsea</a>: Pandas-based Single Enrichment Analysis.<br>
-						A little package to compute enrichment analysis on pandas dataframe.<br>
+					<p><a href='https://github.com/pathmodel/pathmodel'>pathmodel</a>.<br>
+						Prototype applying the metabolic pathway drift hypothesis to infer ab initio reaction using known reactions.<br>
 					</p>
 				</li>
 			</ul>
