Add metage2metabo to Tools.

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -18,6 +18,11 @@ permalink: pages/tools/
 						Prototype applying the metabolic pathway drift hypothesis to infer ab initio reaction using known reactions.<br>
 					</p>
 				</li>
+				<li>
+					<p><a href='https://github.com/AuReMe/metage2metabo'>metage2metabo</a>.<br>
+						From annotated genomes to metabolic screening in large scale microbiotas.<br>
+					</p>
+				</li>
 			</ul>
 			<h2>Syntax Highlight</h2>
 			<ul>
