--- a/pages/publications.html
+++ b/pages/publications.html
@@ -12,7 +12,7 @@ permalink: pages/publications/
 		<li>
 			<p> Computational analysis of the Plasmodiophora brassicae genome: mitochondrial sequence description and metabolic pathway database design. <br>
 				Stephanie Daval, Arnaud Belcour, Kevin Gazengel, Ludovic Legrand, Jerome Gouzy, Ludovic Cottret, Lionel Lebreton, Yoann Aigu, Christophe Mougel and Maria Manzanares-Dauleux. <br>
-				<a href='https://doi.org/10.1016/j.ygeno.2018.11.013'>Article at Genomics</a> (2018).
+				<a href='https://doi.org/10.1016/j.ygeno.2018.11.013'>Article at Genomics</a> (2018), <a href='https://hal-agrocampus-ouest.archives-ouvertes.fr/hal-01943250v1/bibtex'>bibtex</a>.
 			</p>
 		</li>
 	</ul>
@@ -21,7 +21,7 @@ permalink: pages/publications/
 			<li>
 				<p> Inferring biochemical reactions and metabolite structures to cope with metabolic pathway drift. <br>
 					Arnaud Belcour, Jean Girard, Méziane Aite, Ludovic Delage, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov.
-					<a href='https://doi.org/10.1101/462556 '>Preprint at bioRxiv</a> (2018).
+					<a href='https://doi.org/10.1101/462556'>Preprint at bioRxiv</a> (2018), <a href='https://github.com/pathmodel/pathmodel'>code</a>.
 				</p>
 			</li>
 		</ul>
