Update cv pages.

--- a/pages/cv/2016_internship.html
+++ b/pages/cv/2016_internship.html
@@ -8,7 +8,8 @@ permalink: pages/cv/2016_internship
 	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/aphid.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<p>
-				WIP
+				Benchmark of triplestore by creating SPARQL queries.
+				Participate in the development of AskOmics (named graphs and metadatas).
 			</p>
 		</ul>
 </div>
