--- a/pages/cv/2017_cdd.html
+++ b/pages/cv/2017_cdd.html
@@ -4,11 +4,14 @@ title: Bioinformatic engineer
 permalink: pages/cv/2017_cdd
 ---
 <div class="cv_content">
-	<h2>Metabolic Network Reconstruction</h2>
+	<h2>Metabolic Network</h2>
 	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/algae.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<p>
-				WIP
+				Development of tool to reconstruct metabolic network (mpwt).
+				Participate in update of already developed library (padmet, menetools, miscoto, clyngor).
+				Creation of a prototype applying the Metabolic Pathway Drift hypothesis (pathmodel).
+				Create container (Docker, Singularity) for these tools to use them on cluster.
 			</p>
 		</ul>
 </div>
