--- a/pages/cv/2017_cont.html
+++ b/pages/cv/2017_cont.html
@@ -4,11 +4,12 @@ title: Contractual Job
 permalink: pages/cv/2017_cont
 ---
 <div class="cv_content">
-	<h2>Working on Plasmodiophora brassicae Genome</h2>
+	<h2>Work on <i>Plasmodiophora brassicae</i> genome</h2>
 	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/infected_brassica_rapa.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<p>
-				WIP
+				Analysis of the mitochondrial genome of <i>Plasmodiophora brassicae</i>, make a phylogeny of the Cercozoa.
+				Participate in the writing of the genome article.
 			</p>
 		</ul>
 </div>
