--- a/pages/cv/2015_internship.html
+++ b/pages/cv/2015_internship.html
@@ -8,7 +8,8 @@ permalink: pages/cv/2015_internship
 	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/sturnus_vulgaris.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<p>
-				WIP
+				One-day recording of songs and calls.
+				Continuous sampling to record social interactions.
 			</p>
 		</ul>
 </div>
