--- a/pages/cv/2017_internship.html
+++ b/pages/cv/2017_internship.html
@@ -8,7 +8,7 @@ permalink: pages/cv/2017_internship
 	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/infected_brassica_rapa.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<p>
-				WIP
+				Analysis of transcriptomics data using enrichment analysis.
 			</p>
 		</ul>
 </div>
