--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@ layout: default
 <img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/profile.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 
 <p >Hello,</p>
-<p> I am a bioinformatic engineer working in the <a href="http://www.irisa.fr/dyliss/">DYLISS team</a>.
-	My work focuses on metabolic network, <i>ab initio</i> inference of metabolic pathways and classification of enzymes in family.</p>
-<p> In 2015 I obtained a Master Degree in Behavioural Biology and in 2017 I obtained a Master Degree in Bioinformatic.</p>
+<p> I have worked as a bioinformatic engineer in the <a href="http://www.irisa.fr/dyliss/">DYLISS team</a> from 2017 to 2019.
+	My work focused on metabolic network, <i>ab initio</i> inference of metabolic pathways and classification of enzymes.</p>
 
 </div>
