--- a/pages/cv/2014_internship.html
+++ b/pages/cv/2014_internship.html
@@ -8,7 +8,7 @@ permalink: pages/cv/2014_internship
 		<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/nudge_water.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<p>
-				Development of an experience on water quality.
+				Development of an experience on water quality in Behavioral Economics.
 			</p>
 		</ul>
 </div>
