Fix CV navigation bar.

--- a/pages/cv/2015_internship.html
+++ b/pages/cv/2015_internship.html
@@ -5,6 +5,7 @@ permalink: pages/cv/2015_internship
 ---
 <div class="cv_content">
 	<h2>Social and vocal convergence in european starling</h2>
+	<p>Université de Rennes 1, <a href="https://ethos.univ-rennes1.fr/">EthoS Team</a></p>
 	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/sturnus_vulgaris.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<p>
