--- a/pages/cv/2016_internship.html
+++ b/pages/cv/2016_internship.html
@@ -5,6 +5,7 @@ permalink: pages/cv/2016_internship
 ---
 <div class="cv_content">
 	<h2>RDF data and SPARQL queries on aphid data</h2>
+	<p>Université de Rennes 1, <a href="http://www.irisa.fr/dyliss/">Dyliss Team</a> </p>
 	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/aphid.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<p>
