--- a/pages/cv/2014_internship.html
+++ b/pages/cv/2014_internship.html
@@ -5,6 +5,7 @@ permalink: pages/cv/2014_internship
 ---
 <div class="cv_content">
 	<h2>Water pollution and nudges</h2>
+	<p>Université de Rennes 1, <a href="https://crem.univ-rennes1.fr/">CREM Team</a></p>
 		<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/nudge_water.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<p>
