--- a/pages/cv/2017_internship.html
+++ b/pages/cv/2017_internship.html
@@ -5,6 +5,7 @@ permalink: pages/cv/2017_internship
 ---
 <div class="cv_content">
 	<h2>Differential gene expression in <i>Plasmodiophora brassicae</i>.</h2>
+	<p>INRA, <a href="https://www6.rennes.inra.fr/igepp_eng/Research-teams/Resistance-and-Adaptation">IGEPP RA team</a> </p>
 	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/infected_brassica_rapa.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<p>
