--- a/pages/publications.html
+++ b/pages/publications.html
@@ -19,6 +19,12 @@ permalink: pages/publications/
 	<h2>Preprint</h2>
 		<ul>
 			<li>
+				<p> Metage2Metabo: metabolic complementarity applied to genomes of large-scale microbiotas for the identification of keystone species. <br>
+					Arnaud Belcour, Clémence Frioux, Meziane Aite, Anthony Bretaudeau and Anne Siegel.
+					<a href='https://doi.org/10.1101/803056'>Preprint at bioRxiv</a> (2019), <a href='https://github.com/AuReMe/metage2metabo'>code</a>.
+				</p>
+			</li>
+			<li>
 				<p> Inferring biochemical reactions and metabolite structures to cope with metabolic pathway drift. <br>
 					Arnaud Belcour, Jean Girard, Méziane Aite, Ludovic Delage, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov.
 					<a href='https://doi.org/10.1101/462556'>Preprint at bioRxiv</a> (2018), <a href='https://github.com/pathmodel/pathmodel'>code</a>.
