Update Home and CV Pages.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@ layout: default
 <img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/profile.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 
 <p >Hello,</p>
-<p> I have worked as a bioinformatic engineer in the <a href="http://www.irisa.fr/dyliss/">DYLISS team</a> from 2017 to 2019.
-	My work focused on metabolic network, <i>ab initio</i> inference of metabolic pathways and classification of enzymes.</p>
+<p> I am a PhD student working on methods to infer model metabolism for community reduction in the <a href="http://www.irisa.fr/dyliss/">DYLISS team</a>.</p>
 
 </div>
