--- a/pages/cv/2017_cdd.html
+++ b/pages/cv/2017_cdd.html
@@ -9,10 +9,11 @@ permalink: pages/cv/2017_cdd
 	<img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/algae.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 		<ul>
 			<p>
-				Development of tool to reconstruct metabolic network (mpwt).
-				Participate in update of already developed library (padmet, menetools, miscoto, clyngor).
-				Creation of a prototype applying the Metabolic Pathway Drift hypothesis (pathmodel).
-				Create container (Docker, Singularity) for these tools to use them on cluster.
+				Development of a tool to reconstruct multiple metabolic networks with Pathway Tools using multiprocessing (<a href="https://github.com/AuReMe/mpwt">mpwt</a>).<br>
+				Development of <a href="https://github.com/AuReMe/metage2metabo">metage2metabo</a>, a pipeline to reconstruct metabolic networks from microbiotas genomes and identify keystone species among them.
+				Use and give feedbacks for some python packages (<a href="https://github.com/AuReMe/padmet">padmet</a>, <a href="https://github.com/cfrioux/MeneTools">menetools</a>, <a href="https://github.com/cfrioux/miscoto">miscoto</a>, <a href="https://github.com/Aluriak/clyngor">clyngor</a>).<br>
+				Creation of a prototype applying the Metabolic Pathway Drift hypothesis (<a href="https://github.com/pathmodel/pathmodel">PathModel</a>).<br>
+				Create container (Docker, Singularity) for these tools to use them on cluster.<br>
 			</p>
 		</ul>
 </div>
