--- a/pages/publications.html
+++ b/pages/publications.html
@@ -10,6 +10,12 @@ permalink: pages/publications/
 	<h2>Article</h2>
 	<ul>
 		<li>
+			<p> Genome–Scale Metabolic Networks Shed Light on the Carotenoid Biosynthesis Pathway in the Brown Algae Saccharina japonica and Cladosiphon okamuranus. <br>
+				Delphine Nègre, Méziane Aite, Arnaud Belcour, Clémence Frioux, Loraine Brillet-Guéguen, Xi Liu, Philippe Bordron, Olivier Godfroy, Agnieszka Lipinska, Catherine Leblanc, Anne Siegel, Simon Dittami, Erwan Corre and Gabriel Markov. <br>
+				<a href='https://www.mdpi.com/2076-3921/8/11/564'>Article at Antioxidants</a> (2019).
+			</p>
+		</li>
+		<li>
 			<p> Computational analysis of the Plasmodiophora brassicae genome: mitochondrial sequence description and metabolic pathway database design. <br>
 				Stephanie Daval, Arnaud Belcour, Kevin Gazengel, Ludovic Legrand, Jerome Gouzy, Ludovic Cottret, Lionel Lebreton, Yoann Aigu, Christophe Mougel and Maria Manzanares-Dauleux. <br>
 				<a href='https://doi.org/10.1016/j.ygeno.2018.11.013'>Article at Genomics</a> (2019), <a href='https://authors.elsevier.com/c/1a2mz3A54zRrZZ'>Share Link (until 01 January 2020)</a>, <a href='https://hal-agrocampus-ouest.archives-ouvertes.fr/hal-01943250v1/bibtex'>bibtex</a>.
