--- a/pages/publications.html
+++ b/pages/publications.html
@@ -18,7 +18,7 @@ permalink: pages/publications/
 		<li>
 			<p> Computational analysis of the Plasmodiophora brassicae genome: mitochondrial sequence description and metabolic pathway database design. <br>
 				Stephanie Daval, Arnaud Belcour, Kevin Gazengel, Ludovic Legrand, Jerome Gouzy, Ludovic Cottret, Lionel Lebreton, Yoann Aigu, Christophe Mougel and Maria Manzanares-Dauleux. <br>
-				<a href='https://doi.org/10.1016/j.ygeno.2018.11.013'>Article at Genomics</a> (2019), <a href='https://authors.elsevier.com/c/1a2mz3A54zRrZZ'>Share Link (until 01 January 2020)</a>, <a href='https://hal-agrocampus-ouest.archives-ouvertes.fr/hal-01943250v1/bibtex'>bibtex</a>.
+				<a href='https://doi.org/10.1016/j.ygeno.2018.11.013'>Article at Genomics</a> (2019), <a href='https://hal-agrocampus-ouest.archives-ouvertes.fr/hal-01943250v1/bibtex'>bibtex</a>.
 			</p>
 		</li>
 	</ul>
