--- a/pages/publications.html
+++ b/pages/publications.html
@@ -10,6 +10,12 @@ permalink: pages/publications/
 	<h2>Article</h2>
 	<ul>
 		<li>
+			<p> Inferring biochemical reactions and metabolite structures to cope with metabolic pathway drift. <br>
+				Arnaud Belcour, Jean Girard, Méziane Aite, Ludovic Delage, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov.
+				<a href='https://doi.org/10.1016/j.isci.2020.100849'>Article at iScience</a> (2020), <a href='https://github.com/pathmodel/pathmodel'>code</a>.
+			</p>
+		</li>
+		<li>
 			<p> Genome–Scale Metabolic Networks Shed Light on the Carotenoid Biosynthesis Pathway in the Brown Algae Saccharina japonica and Cladosiphon okamuranus. <br>
 				Delphine Nègre, Méziane Aite, Arnaud Belcour, Clémence Frioux, Loraine Brillet-Guéguen, Xi Liu, Philippe Bordron, Olivier Godfroy, Agnieszka Lipinska, Catherine Leblanc, Anne Siegel, Simon Dittami, Erwan Corre and Gabriel Markov. <br>
 				<a href='https://www.mdpi.com/2076-3921/8/11/564'>Article at Antioxidants</a> (2019).
@@ -28,12 +34,6 @@ permalink: pages/publications/
 				<p> Metage2Metabo: metabolic complementarity applied to genomes of large-scale microbiotas for the identification of keystone species. <br>
 					Arnaud Belcour, Clémence Frioux, Meziane Aite, Anthony Bretaudeau and Anne Siegel.
 					<a href='https://doi.org/10.1101/803056'>Preprint at bioRxiv</a> (2019), <a href='https://github.com/AuReMe/metage2metabo'>code</a>.
-				</p>
-			</li>
-			<li>
-				<p> Inferring biochemical reactions and metabolite structures to cope with metabolic pathway drift. <br>
-					Arnaud Belcour, Jean Girard, Méziane Aite, Ludovic Delage, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov.
-					<a href='https://doi.org/10.1101/462556'>Preprint at bioRxiv</a> (2018), <a href='https://github.com/pathmodel/pathmodel'>code</a>.
 				</p>
 			</li>
 		</ul>
