--- a/pages/publications.html
+++ b/pages/publications.html
@@ -11,7 +11,7 @@ permalink: pages/publications/
 	<ul>
 		<li>
 			<p> Inferring biochemical reactions and metabolite structures to cope with metabolic pathway drift. <br>
-				Arnaud Belcour, Jean Girard, Méziane Aite, Ludovic Delage, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov.
+				Arnaud Belcour, Jean Girard, Méziane Aite, Ludovic Delage, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov. <br>
 				<a href='https://doi.org/10.1016/j.isci.2020.100849'>Article at iScience</a> (2020), <a href='https://github.com/pathmodel/pathmodel'>code</a>.
 			</p>
 		</li>
