--- a/pages/publications.html
+++ b/pages/publications.html
@@ -11,19 +11,19 @@ permalink: pages/publications/
 	<ul>
 		<li>
 			<p> Inferring biochemical reactions and metabolite structures to cope with metabolic pathway drift. <br>
-				Arnaud Belcour, Jean Girard, Méziane Aite, Ludovic Delage, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov. <br>
+				Arnaud Belcour, Jean Girard, Méziane Aïte, Ludovic Delage, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov. <br>
 				<a href='https://doi.org/10.1016/j.isci.2020.100849'>Article at iScience</a> (2020), <a href='https://github.com/pathmodel/pathmodel'>code</a>.
 			</p>
 		</li>
 		<li>
 			<p> Genome–Scale Metabolic Networks Shed Light on the Carotenoid Biosynthesis Pathway in the Brown Algae Saccharina japonica and Cladosiphon okamuranus. <br>
-				Delphine Nègre, Méziane Aite, Arnaud Belcour, Clémence Frioux, Loraine Brillet-Guéguen, Xi Liu, Philippe Bordron, Olivier Godfroy, Agnieszka Lipinska, Catherine Leblanc, Anne Siegel, Simon Dittami, Erwan Corre and Gabriel Markov. <br>
+				Delphine Nègre, Méziane Aïte, Arnaud Belcour, Clémence Frioux, Loraine Brillet-Guéguen, Xi Liu, Philippe Bordron, Olivier Godfroy, Agnieszka Lipinska, Catherine Leblanc, Anne Siegel, Simon Dittami, Erwan Corre and Gabriel Markov. <br>
 				<a href='https://www.mdpi.com/2076-3921/8/11/564'>Article at Antioxidants</a> (2019).
 			</p>
 		</li>
 		<li>
 			<p> Computational analysis of the Plasmodiophora brassicae genome: mitochondrial sequence description and metabolic pathway database design. <br>
-				Stephanie Daval, Arnaud Belcour, Kevin Gazengel, Ludovic Legrand, Jerome Gouzy, Ludovic Cottret, Lionel Lebreton, Yoann Aigu, Christophe Mougel and Maria Manzanares-Dauleux. <br>
+				Stéphanie Daval, Arnaud Belcour, Kevin Gazengel, Ludovic Legrand, Jerome Gouzy, Ludovic Cottret, Lionel Lebreton, Yoann Aigu, Christophe Mougel and Maria Manzanares-Dauleux. <br>
 				<a href='https://doi.org/10.1016/j.ygeno.2018.11.013'>Article at Genomics</a> (2019), <a href='https://hal-agrocampus-ouest.archives-ouvertes.fr/hal-01943250v1/bibtex'>bibtex</a>.
 			</p>
 		</li>
@@ -31,8 +31,16 @@ permalink: pages/publications/
 	<h2>Preprint</h2>
 		<ul>
 			<li>
+				<p> Soil microbiota influences clubroot disease by modulating Plasmodiophora brassicae and Brassica napus transcriptomes. <br>
+					Stéphanie Daval, Kévin Gazengel, Arnaud Belcour, Juliette Linglin, Anne-Yvonne Guillerm-Erckelboudt, Alain Sarniguet, Maria J Manzanares-Dauleux, Lionel Lebreton and Christophe Mougel.
+					<a href='https://doi.org/10.1101/2020.02.05.935510'>Preprint at bioRxiv</a> (2020).
+				</p>
+			</li>
+		</ul>
+		<ul>
+			<li>
 				<p> Metage2Metabo: metabolic complementarity applied to genomes of large-scale microbiotas for the identification of keystone species. <br>
-					Arnaud Belcour, Clémence Frioux, Meziane Aite, Anthony Bretaudeau and Anne Siegel.
+					Arnaud Belcour, Clémence Frioux, Meziane Aïte, Anthony Bretaudeau and Anne Siegel.
 					<a href='https://doi.org/10.1101/803056'>Preprint at bioRxiv</a> (2019), <a href='https://github.com/AuReMe/metage2metabo'>code</a>.
 				</p>
 			</li>
