Add missing line breaks.

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -32,7 +32,7 @@ permalink: pages/publications/
 		<ul>
 			<li>
 				<p> Soil microbiota influences clubroot disease by modulating Plasmodiophora brassicae and Brassica napus transcriptomes. <br>
-					Stéphanie Daval, Kévin Gazengel, Arnaud Belcour, Juliette Linglin, Anne-Yvonne Guillerm-Erckelboudt, Alain Sarniguet, Maria J Manzanares-Dauleux, Lionel Lebreton and Christophe Mougel.
+					Stéphanie Daval, Kévin Gazengel, Arnaud Belcour, Juliette Linglin, Anne-Yvonne Guillerm-Erckelboudt, Alain Sarniguet, Maria J Manzanares-Dauleux, Lionel Lebreton and Christophe Mougel. <br>
 					<a href='https://doi.org/10.1101/2020.02.05.935510'>Preprint at bioRxiv</a> (2020).
 				</p>
 			</li>
@@ -40,7 +40,7 @@ permalink: pages/publications/
 		<ul>
 			<li>
 				<p> Metage2Metabo: metabolic complementarity applied to genomes of large-scale microbiotas for the identification of keystone species. <br>
-					Arnaud Belcour, Clémence Frioux, Meziane Aïte, Anthony Bretaudeau and Anne Siegel.
+					Arnaud Belcour, Clémence Frioux, Meziane Aïte, Anthony Bretaudeau and Anne Siegel. <br>
 					<a href='https://doi.org/10.1101/803056'>Preprint at bioRxiv</a> (2019), <a href='https://github.com/AuReMe/metage2metabo'>code</a>.
 				</p>
 			</li>
