Add bibtext citations for article.

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -12,19 +12,19 @@ permalink: pages/publications/
 		<li>
 			<p> Inferring biochemical reactions and metabolite structures to cope with metabolic pathway drift. <br>
 				Arnaud Belcour, Jean Girard, Méziane Aïte, Ludovic Delage, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov. <br>
-				<a href='https://doi.org/10.1016/j.isci.2020.100849'>Article at iScience</a> (2020), <a href='https://github.com/pathmodel/pathmodel'>code</a>.
+				<a href='https://doi.org/10.1016/j.isci.2020.100849'>Article at iScience</a> (2020), <a href='https://hal.archives-ouvertes.fr/hal-01943880v1/bibtex'>bibtex</a>, <a href='https://github.com/pathmodel/pathmodel'>code</a>.
 			</p>
 		</li>
 		<li>
 			<p> Genome–Scale Metabolic Networks Shed Light on the Carotenoid Biosynthesis Pathway in the Brown Algae Saccharina japonica and Cladosiphon okamuranus. <br>
 				Delphine Nègre, Méziane Aïte, Arnaud Belcour, Clémence Frioux, Loraine Brillet-Guéguen, Xi Liu, Philippe Bordron, Olivier Godfroy, Agnieszka Lipinska, Catherine Leblanc, Anne Siegel, Simon Dittami, Erwan Corre and Gabriel Markov. <br>
-				<a href='https://www.mdpi.com/2076-3921/8/11/564'>Article at Antioxidants</a> (2019).
+				<a href='https://www.mdpi.com/2076-3921/8/11/564'>Article at Antioxidants</a> (2019), <a href='https://hal.archives-ouvertes.fr/hal-02395080v1/bibtex'>bibtex</a>.
 			</p>
 		</li>
 		<li>
 			<p> Computational analysis of the Plasmodiophora brassicae genome: mitochondrial sequence description and metabolic pathway database design. <br>
 				Stéphanie Daval, Arnaud Belcour, Kevin Gazengel, Ludovic Legrand, Jerome Gouzy, Ludovic Cottret, Lionel Lebreton, Yoann Aigu, Christophe Mougel and Maria Manzanares-Dauleux. <br>
-				<a href='https://doi.org/10.1016/j.ygeno.2018.11.013'>Article at Genomics</a> (2019), <a href='https://hal-agrocampus-ouest.archives-ouvertes.fr/hal-01943250v1/bibtex'>bibtex</a>.
+				<a href='https://doi.org/10.1016/j.ygeno.2018.11.013'>Article at Genomics</a> (2019), <a href='https://hal.archives-ouvertes.fr/hal-01943250v1/bibtex'>bibtex</a>.
 			</p>
 		</li>
 	</ul>
