--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ layout: default
 <img class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/profile.jpg"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 
 <p >Hello,</p>
-<p> I am a PhD student working on methods to infer model metabolism for community reduction in the <a href="http://www.irisa.fr/dyliss/">DYLISS team</a>.</p>
+<p> I am a PhD student working on methods to infer model metabolism for community reduction in the <a href="https://team.inria.fr/dyliss/">DYLISS team</a>.</p>
 
 </div>
