Add new article.

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -10,6 +10,12 @@ permalink: pages/publications/
 	<h2>Article</h2>
 	<ul>
 		<li>
+			<p> Soil microbiota influences clubroot disease by modulating Plasmodiophora brassicae and Brassica napus transcriptomes. <br>
+				Stéphanie Daval, Kévin Gazengel, Arnaud Belcour, Juliette Linglin, Anne-Yvonne Guillerm-Erckelboudt, Alain Sarniguet, Maria J Manzanares-Dauleux, Lionel Lebreton and Christophe Mougel. <br>
+				<a href=' https://doi.org/10.1111/1751-7915.13634'>Article at Microbial Biotechnology</a> (2020).
+			</p>
+		</li>
+		<li>
 			<p> Inferring biochemical reactions and metabolite structures to cope with metabolic pathway drift. <br>
 				Arnaud Belcour, Jean Girard, Méziane Aïte, Ludovic Delage, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov. <br>
 				<a href='https://doi.org/10.1016/j.isci.2020.100849'>Article at iScience</a> (2020), <a href='https://hal.archives-ouvertes.fr/hal-01943880v2/bibtex'>bibtex</a>, <a href='https://github.com/pathmodel/pathmodel'>code</a>.
@@ -29,14 +35,6 @@ permalink: pages/publications/
 		</li>
 	</ul>
 	<h2>Preprint</h2>
-		<ul>
-			<li>
-				<p> Soil microbiota influences clubroot disease by modulating Plasmodiophora brassicae and Brassica napus transcriptomes. <br>
-					Stéphanie Daval, Kévin Gazengel, Arnaud Belcour, Juliette Linglin, Anne-Yvonne Guillerm-Erckelboudt, Alain Sarniguet, Maria J Manzanares-Dauleux, Lionel Lebreton and Christophe Mougel. <br>
-					<a href='https://doi.org/10.1101/2020.02.05.935510'>Preprint at bioRxiv</a> (2020).
-				</p>
-			</li>
-		</ul>
 		<ul>
 			<li>
 				<p> Metage2Metabo: metabolic complementarity applied to genomes of large-scale microbiotas for the identification of keystone species. <br>
