Update Publications and Tools.

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -37,6 +37,12 @@ permalink: pages/publications/
 	<h2>Preprint</h2>
 		<ul>
 			<li>
+				<p> Comparative Transcriptome Analysis Provides Insights into The Response of Ulva Compressa to The Fluctuating Salinity Conditions. <br>
+					Qikun Xing, Guiqi Bi, Min Cao, Arnaud Belcour, Méziane Aïte and Yunxiang Mao. <br>
+					<a href='https://doi.org/10.21203/rs.3.rs-47388/v1'>Preprint at Research Square</a> (2020).
+				</p>
+			</li>
+			<li>
 				<p> Metage2Metabo: metabolic complementarity applied to genomes of large-scale microbiotas for the identification of keystone species. <br>
 					Arnaud Belcour, Clémence Frioux, Meziane Aïte, Anthony Bretaudeau and Anne Siegel. <br>
 					<a href='https://doi.org/10.1101/803056'>Preprint at bioRxiv</a> (2019), <a href='https://github.com/AuReMe/metage2metabo'>code</a>.
