--- a/pages/tools.html
+++ b/pages/tools.html
@@ -7,7 +7,18 @@ permalink: pages/tools/
 
 	<h1 class="page-heading">Tools</h1>
 		<h2>Python package</h2>
+			<h3>Package in development</h3>
 			<ul>
+				<li>
+					<p><a href='https://github.com/AuReMe/aucome'>aucome</a>.<br>
+						AUtomatic COmparison of MEtabolism.<br>
+					</p>
+				</li>
+				<li>
+					<p><a href='https://github.com/AuReMe/metage2metabo'>metage2metabo</a>.<br>
+						From annotated genomes to metabolic screening in large scale microbiotas.<br>
+					</p>
+				</li>
 				<li>
 					<p><a href='https://github.com/AuReMe/mpwt'>mpwt</a>: Pathway-Tools multiprocessing package.<br>
 						A little package to launch multiple runs of Pathway-Tools on different genomes, using genbank files.<br>
@@ -18,12 +29,16 @@ permalink: pages/tools/
 						Prototype applying the metabolic pathway drift hypothesis to infer ab initio reaction using known reactions.<br>
 					</p>
 				</li>
-				<li>
-					<p><a href='https://github.com/AuReMe/metage2metabo'>metage2metabo</a>.<br>
-						From annotated genomes to metabolic screening in large scale microbiotas.<br>
-					</p>
-				</li>
 			</ul>
+			<h3>Stale package</h3>
+				<ul>
+					<li>
+						<p><a href='https://github.com/ArnaudBelcour/gff_to_gbk'>gff_to_gbk</a>.<br>
+							Draft script to create GenBank from GFF file.<br>
+							A specific variant using eggnog-mapper results has been developed: <p><a href='https://github.com/AuReMe/emapper_to_gbk'>emapper_to_gbk</a>.<br>
+						</p>
+					</li>
+				</ul>
 			<h2>Syntax Highlight</h2>
 			<ul>
 				<li>
