Fix issue with CSS.

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -35,7 +35,7 @@ permalink: pages/tools/
 					<li>
 						<p><a href='https://github.com/ArnaudBelcour/gff_to_gbk'>gff_to_gbk</a>.<br>
 							Draft script to create GenBank from GFF file.<br>
-							A specific variant using eggnog-mapper results has been developed: <p><a href='https://github.com/AuReMe/emapper_to_gbk'>emapper_to_gbk</a>.<br>
+							A specific variant using eggnog-mapper results has been developed: <a href='https://github.com/AuReMe/emapper_to_gbk'>emapper_to_gbk</a>.<br>
 						</p>
 					</li>
 				</ul>
