Update publication list.

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -6,9 +6,15 @@ permalink: pages/publications/
 <div class="Publications" id="content">
 
 	<h1 class="page-heading">Publications</h1>
-	<p> My publications are also listed on my <a href='https://scholar.google.fr/citations?user=DGcD6P0AAAAJ&hl=fr'>Google Scholar profile</a>.</p>
+	<p> My publications are also listed on my <a href='https://orcid.org/0000-0003-1170-0785'>ORCID profile</a> and on my <a href='https://scholar.google.fr/citations?user=DGcD6P0AAAAJ&hl'>Google Scholar profile</a>.</p>
 	<h2>Article</h2>
 	<ul>
+		<li>
+			<p> Metage2Metabo, microbiota-scale metabolic complementarity for the identication of key species. <br>
+				Arnaud Belcour, Clémence Frioux, Méziane Aite, Anthony Bretaudeau, Falk Hildebrand and Anne Siegel. <br>
+				<a href='http://dx.doi.org/10.7554/elife.6196'>Article at eLife</a> (2020), <a href='https://github.com/AuReMe/metage2metabo'>code</a>.
+			</p>
+		</li>
 		<li>
 			<p> Soil microbiota influences clubroot disease by modulating Plasmodiophora brassicae and Brassica napus transcriptomes. <br>
 				Stéphanie Daval, Kévin Gazengel, Arnaud Belcour, Juliette Linglin, Anne-Yvonne Guillerm-Erckelboudt, Alain Sarniguet, Maria J Manzanares-Dauleux, Lionel Lebreton and Christophe Mougel. <br>
@@ -40,12 +46,6 @@ permalink: pages/publications/
 				<p> Comparative Transcriptome Analysis Provides Insights into The Response of Ulva Compressa to The Fluctuating Salinity Conditions. <br>
 					Qikun Xing, Guiqi Bi, Min Cao, Arnaud Belcour, Méziane Aïte and Yunxiang Mao. <br>
 					<a href='https://doi.org/10.21203/rs.3.rs-47388/v1'>Preprint at Research Square</a> (2020).
-				</p>
-			</li>
-			<li>
-				<p> Metage2Metabo: metabolic complementarity applied to genomes of large-scale microbiotas for the identification of keystone species. <br>
-					Arnaud Belcour, Clémence Frioux, Meziane Aïte, Anthony Bretaudeau and Anne Siegel. <br>
-					<a href='https://doi.org/10.1101/803056'>Preprint at bioRxiv</a> (2019), <a href='https://github.com/AuReMe/metage2metabo'>code</a>.
 				</p>
 			</li>
 		</ul>
