--- a/pages/publications.html
+++ b/pages/publications.html
@@ -6,24 +6,25 @@ permalink: pages/publications/
 <div class="Publications" id="content">
 
 	<h1 class="page-heading">Publications</h1>
-	<p> My publications are also listed on my <a href='https://orcid.org/0000-0003-1170-0785'>ORCID profile</a> and on my <a href='https://scholar.google.fr/citations?user=DGcD6P0AAAAJ&hl'>Google Scholar profile</a>.</p>
+	<p> My publications are also listed on my <a href='https://orcid.org/0000-0003-1170-0785'>ORCID profile</a> and on my <a href='https://scholar.google.fr/citations?user=DGcD6P0AAAAJ&hl'>Google Scholar profile</a>.</p><br>
+	<p> <b>In bold</b>: these authors contributed equally.</p>
 	<h2>Article</h2>
 	<ul>
 		<li>
 			<p> Metage2Metabo, microbiota-scale metabolic complementarity for the identication of key species. <br>
-				Arnaud Belcour, Clémence Frioux, Méziane Aite, Anthony Bretaudeau, Falk Hildebrand and Anne Siegel. <br>
+				<b>Arnaud Belcour</b>, <b>Clémence Frioux</b>, Méziane Aite, Anthony Bretaudeau, Falk Hildebrand and Anne Siegel. <br>
 				<a href='http://dx.doi.org/10.7554/elife.61968'>Article at eLife</a> (2020), <a href='https://github.com/AuReMe/metage2metabo'>code</a>.
 			</p>
 		</li>
 		<li>
 			<p> Soil microbiota influences clubroot disease by modulating Plasmodiophora brassicae and Brassica napus transcriptomes. <br>
 				Stéphanie Daval, Kévin Gazengel, Arnaud Belcour, Juliette Linglin, Anne-Yvonne Guillerm-Erckelboudt, Alain Sarniguet, Maria J Manzanares-Dauleux, Lionel Lebreton and Christophe Mougel. <br>
-				<a href=' https://doi.org/10.1111/1751-7915.13634'>Article at Microbial Biotechnology</a> (2020).
+				<a href='https://doi.org/10.1111/1751-7915.13634'>Article at Microbial Biotechnology</a> (2020).
 			</p>
 		</li>
 		<li>
 			<p> Inferring biochemical reactions and metabolite structures to cope with metabolic pathway drift. <br>
-				Arnaud Belcour, Jean Girard, Méziane Aïte, Ludovic Delage, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov. <br>
+				<b>Arnaud Belcour</b>, <b>Jean Girard</b>, <b>Méziane Aïte</b>, <b>Ludovic Delage</b>, Camille Trottier, Charlotte Marteau, Cédric Leroux, Simon M Dittami, Pierre Sauleau, Erwan Corre, Jacques Nicolas, Catherine Boyen, Catherine Leblanc, Jonas Collén, Anne Siegel and Gabriel Markov. <br>
 				<a href='https://doi.org/10.1016/j.isci.2020.100849'>Article at iScience</a> (2020), <a href='https://hal.archives-ouvertes.fr/hal-01943880v2/bibtex'>bibtex</a>, <a href='https://github.com/pathmodel/pathmodel'>code</a>.
 			</p>
 		</li>
@@ -35,7 +36,7 @@ permalink: pages/publications/
 		</li>
 		<li>
 			<p> Computational analysis of the Plasmodiophora brassicae genome: mitochondrial sequence description and metabolic pathway database design. <br>
-				Stéphanie Daval, Arnaud Belcour, Kevin Gazengel, Ludovic Legrand, Jerome Gouzy, Ludovic Cottret, Lionel Lebreton, Yoann Aigu, Christophe Mougel and Maria Manzanares-Dauleux. <br>
+				<b>Stéphanie Daval</b>, <b>Arnaud Belcour</b>, Kevin Gazengel, Ludovic Legrand, Jerome Gouzy, Ludovic Cottret, Lionel Lebreton, Yoann Aigu, Christophe Mougel and Maria Manzanares-Dauleux. <br>
 				<a href='https://doi.org/10.1016/j.ygeno.2018.11.013'>Article at Genomics</a> (2019), <a href='https://hal.archives-ouvertes.fr/hal-01943250v1/bibtex'>bibtex</a>.
 			</p>
 		</li>
