--- a/pages/publications.html
+++ b/pages/publications.html
@@ -11,6 +11,12 @@ permalink: pages/publications/
 	<h2>Article</h2>
 	<ul>
 		<li>
+			<p> Comparative transcriptome analysis provides insights into the response of Ulva compressa to the fluctuating salinity conditions. <br>
+				Qikun Xing, Guiqi Bi, Min Cao, Arnaud Belcour, Méziane Aïte, Zhaolan Mo and Yunxiang Mao. <br>
+				<a href=' https://doi.org/10.1111/jpy.13167'>Article at Journal of Phycology</a> (2021).
+			</p>
+		</li>
+		<li>
 			<p> Metage2Metabo, microbiota-scale metabolic complementarity for the identication of key species. <br>
 				<b>Arnaud Belcour</b>, <b>Clémence Frioux</b>, Méziane Aite, Anthony Bretaudeau, Falk Hildebrand and Anne Siegel. <br>
 				<a href='http://dx.doi.org/10.7554/elife.61968'>Article at eLife</a> (2020), <a href='https://github.com/AuReMe/metage2metabo'>code</a>.
@@ -42,12 +48,4 @@ permalink: pages/publications/
 		</li>
 	</ul>
 	<h2>Preprint</h2>
-		<ul>
-			<li>
-				<p> Comparative Transcriptome Analysis Provides Insights into The Response of Ulva Compressa to The Fluctuating Salinity Conditions. <br>
-					Qikun Xing, Guiqi Bi, Min Cao, Arnaud Belcour, Méziane Aïte and Yunxiang Mao. <br>
-					<a href='https://doi.org/10.21203/rs.3.rs-47388/v1'>Preprint at Research Square</a> (2020).
-				</p>
-			</li>
-		</ul>
 </div>
