Add new article.

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -11,6 +11,12 @@ permalink: pages/publications/
 	<h2>Article</h2>
 	<ul>
 		<li>
+			<p> Semi-Quantitative Targeted Gas Chromatography-Mass Spectrometry Profiling Supports a Late Side-Chain Reductase Cycloartenol-to-Cholesterol Biosynthesis Pathway in Brown Algae. <br>
+				Jean Girard, Goulven Lanneau, Ludovic Delage, Cédric Leroux, Arnaud Belcour, Jeanne Got, Jonas Collén, Catherine Boyen, Anne Siegel, Simon M. Dittami, Catherine Leblanc and Gabriel V. Markov. <br>
+				<a href=' https://www.frontiersin.org/articles/10.3389/fpls.2021.648426/full'>Article at Journal of Frontiers in Plant Science</a> (2021).
+			</p>
+		</li>
+		<li>
 			<p> Comparative transcriptome analysis provides insights into the response of Ulva compressa to the fluctuating salinity conditions. <br>
 				Qikun Xing, Guiqi Bi, Min Cao, Arnaud Belcour, Méziane Aïte, Zhaolan Mo and Yunxiang Mao. <br>
 				<a href=' https://doi.org/10.1111/jpy.13167'>Article at Journal of Phycology</a> (2021).
