Add esmecata in blog tools.

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -10,6 +10,11 @@ permalink: pages/tools/
 			<h3>Package in development</h3>
 			<ul>
 				<li>
+					<p><a href='https://github.com/AuReMe/esmecata'>esmecata</a>.<br>
+						EsMeCaTa: Estimating Metabolic Capabilties from Taxonomic annotations.<br>
+					</p>
+				</li>
+				<li>
 					<p><a href='https://github.com/AuReMe/aucome'>aucome</a>.<br>
 						AUtomatic COmparison of MEtabolism.<br>
 					</p>
