Add EsMeCaTa preprint.

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -60,4 +60,12 @@ permalink: pages/publications/
 		</li>
 	</ul>
 	<h2>Preprint</h2>
+	<ul></ul>
+	<li>
+		<p> EsMeCaTa: Estimating metabolic capabilities from taxonomic affiliations. <br>
+			Arnaud Belcour, Baptiste Ruiz, Clémence Frioux, Samuel Blanquart and Anne Siegel. <br>
+			<a href='https://doi.org/10.1101/2022.03.16.484574'>Article at bioRxiv</a> (2022).
+		</p>
+	</li>
+</ul>
 </div>
