Fix typo in blog.

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -29,7 +29,7 @@ permalink: pages/publications/
 			</p>
 		</li>
 		<li>
-			<p> Metage2Metabo, microbiota-scale metabolic complementarity for the identication of key species. <br>
+			<p> Metage2Metabo, microbiota-scale metabolic complementarity for the identification of key species. <br>
 				<b>Arnaud Belcour</b>, <b>Clémence Frioux</b>, Méziane Aite, Anthony Bretaudeau, Falk Hildebrand and Anne Siegel. <br>
 				<a href='http://dx.doi.org/10.7554/elife.61968'>Article at eLife</a> (2020), <a href='https://github.com/AuReMe/metage2metabo'>code</a>.
 			</p>
