--- a/pages/publications.html
+++ b/pages/publications.html
@@ -64,13 +64,13 @@ permalink: pages/publications/
 		<li>
 			<p> EsMeCaTa: Estimating metabolic capabilities from taxonomic affiliations. <br>
 				Arnaud Belcour, Baptiste Ruiz, Clémence Frioux, Samuel Blanquart and Anne Siegel. <br>
-				<a href='https://doi.org/10.1101/2022.03.16.484574'>Article at bioRxiv</a> (2022).
+				<a href='https://doi.org/10.1101/2022.03.16.484574'>Article at bioRxiv</a> (2022), <a href='https://github.com/AuReMe/esmecata'>code</a>.
 			</p>
 		</li>
 		<li>
 			<p> AuCoMe: inferring and comparing metabolisms across heterogeneous sets of annotated genomess. <br>
 				<b>Arnaud Belcour</b>, <b>Jeanne Got</b>, <b>Méziane Aite</b>, Ludovic Delage, Jonas Collen, Clémence Frioux, Catherine Leblanc, Simon M. Dittami, Samuel Blanquart, Gabriel V. Markov and Anne Siegel. <br>
-				<a href='https://doi.org/10.1101/2022.06.14.496215'>Article at bioRxiv</a> (2022).
+				<a href='https://doi.org/10.1101/2022.06.14.496215'>Article at bioRxiv</a> (2022), <a href='https://github.com/AuReMe/aucome'>code</a>.
 			</p>
 		</li>
 	</ul>
