--- a/pages/publications.html
+++ b/pages/publications.html
@@ -8,6 +8,17 @@ permalink: pages/publications/
 	<h1 class="page-heading">Publications</h1>
 	<p> My publications are also listed on my <a href='https://orcid.org/0000-0003-1170-0785'>ORCID profile</a> and on my <a href='https://scholar.google.fr/citations?user=DGcD6P0AAAAJ&hl'>Google Scholar profile</a>.</p><br>
 	<p> <b>In bold</b>: these authors contributed equally.</p>
+
+	<h2>PhD Thesis</h2>
+	<ul>
+		<li>
+			<p> Combining knowledge-based and sequence comparison approaches to elucidate metabolic functions, from pathways to communities . <br>
+				Arnaud Belcour, supervised by Samuel Blanquart and Anne Siegel. <br>
+				Jury: Delphine Ropers [Rapporteur], David Vallenet [Rapporteur], Cédric Lhoussaine [President], Olivier Dameron (Examiner), Karoline Faust (Examiner), Fabien Jourdan (Examiner). <br>
+				<a href='https://hal.archives-ouvertes.fr/tel-03924107'>Document at HAL</a> (2022).
+			</p>
+		</li>
+	</ul>
 	<h2>Article</h2>
 	<ul>
 		<li>
