--- a/pages/publications.html
+++ b/pages/publications.html
@@ -14,7 +14,7 @@ permalink: pages/publications/
 		<li>
 			<p> Combining knowledge-based and sequence comparison approaches to elucidate metabolic functions, from pathways to communities . <br>
 				Arnaud Belcour, supervised by Samuel Blanquart and Anne Siegel. <br>
-				Jury: Delphine Ropers [Rapporteur], David Vallenet [Rapporteur], Cédric Lhoussaine [President], Olivier Dameron (Examiner), Karoline Faust (Examiner), Fabien Jourdan (Examiner). <br>
+				Jury: Delphine Ropers (Rapporteur), David Vallenet (Rapporteur), Cédric Lhoussaine (President), Olivier Dameron (Examiner), Karoline Faust (Examiner), Fabien Jourdan (Examiner). <br>
 				<a href='https://hal.archives-ouvertes.fr/tel-03924107'>Document at HAL</a> (2022).
 			</p>
 		</li>
