Update CV pages.

--- a/pages/cv/2019_phd.html
+++ b/pages/cv/2019_phd.html
@@ -5,6 +5,6 @@ permalink: pages/cv/2019_phd
 ---
 <div class="cv_content">
 	<h2>Community reduction in Metagenomics.</h2>
-	<p>INRIA, <a href="https://team.inria.fr/dyliss/">Dyliss Team</a></p>
+	<p>INRIA, <a href="https://www-dyliss.irisa.fr/">Dyliss Team</a></p>
 	WIP
 </div>
