--- a/pages/cv/2022_postdoc.html
+++ b/pages/cv/2022_postdoc.html
@@ -1,6 +1,6 @@
 ---
 layout: cvpages
-title: Post-doctoral fellowship
+title: Post-doctoral fellow
 permalink: pages/cv/2022_postdoc
 ---
 <div class="cv_content">
