--- a/pages/publications.html
+++ b/pages/publications.html
@@ -22,6 +22,12 @@ permalink: pages/publications/
 	<h2>Article</h2>
 	<ul>
 		<li>
+			<p> Inferring and comparing metabolism across heterogeneous sets of annotated genomes using AuCoMe. <br>
+				Arnaud Belcour, Jeanne Got, Méziane Aite, Ludovic Delage, Jonas Collén, Clémence Frioux, Catherine Leblanc, Simon M. Dittami, Samuel Blanquart, Gabriel V. Markov and Anne Siegel​. <br>
+				<a href='https://doi.org/10.1101/gr.277056.122'>Article at Genome Research</a> (2023).
+			</p>
+		</li>
+		<li>
 			<p> Robustness analysis of metabolic predictions in algal microbial communities based on different annotation pipelines. <br>
 				Elham Karimi​, Enora Geslain, Arnaud Belcour, Clémence Frioux, Méziane Aïte, Anne Siegel, Erwan Corre and Simon M. Dittami​. <br>
 				<a href='https://doi.org/10.7717/peerj.11344'>Article at PeerJ</a> (2021).
@@ -76,12 +82,6 @@ permalink: pages/publications/
 			<p> EsMeCaTa: Estimating metabolic capabilities from taxonomic affiliations. <br>
 				Arnaud Belcour, Baptiste Ruiz, Clémence Frioux, Samuel Blanquart and Anne Siegel. <br>
 				<a href='https://doi.org/10.1101/2022.03.16.484574'>Article at bioRxiv</a> (2022), <a href='https://github.com/AuReMe/esmecata'>code</a>.
-			</p>
-		</li>
-		<li>
-			<p> AuCoMe: inferring and comparing metabolisms across heterogeneous sets of annotated genomess. <br>
-				<b>Arnaud Belcour</b>, <b>Jeanne Got</b>, <b>Méziane Aite</b>, Ludovic Delage, Jonas Collen, Clémence Frioux, Catherine Leblanc, Simon M. Dittami, Samuel Blanquart, Gabriel V. Markov and Anne Siegel. <br>
-				<a href='https://doi.org/10.1101/2022.06.14.496215'>Article at bioRxiv</a> (2022), <a href='https://github.com/AuReMe/aucome'>code</a>.
 			</p>
 		</li>
 	</ul>
