Update default page of Bio. Fix publications author.

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -23,7 +23,7 @@ permalink: pages/publications/
 	<ul>
 		<li>
 			<p> Inferring and comparing metabolism across heterogeneous sets of annotated genomes using AuCoMe. <br>
-				Arnaud Belcour, Jeanne Got, Méziane Aite, Ludovic Delage, Jonas Collén, Clémence Frioux, Catherine Leblanc, Simon M. Dittami, Samuel Blanquart, Gabriel V. Markov and Anne Siegel​. <br>
+				<b>Arnaud Belcour</b>, <b>Jeanne Got</b>, Méziane Aite, Ludovic Delage, Jonas Collén, Clémence Frioux, Catherine Leblanc, Simon M. Dittami, Samuel Blanquart, <b>Gabriel V. Markov</b> and <b>Anne Siegel</b>​. <br>
 				<a href='https://doi.org/10.1101/gr.277056.122'>Article at Genome Research</a> (2023).
 			</p>
 		</li>
