--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ layout: default
 <img width="60%" class="homefront_pic" alt="homefront_pic" src="{{ site.url | append: site.baseurl }}/images/profile.png"  style="border-width:1px;border-color:#888;border-style:solid;vertical-align:top">
 
 <p >Hello,</p>
-<p> I am a Post-doctoral fellow working on methods to study the metabolism of micobrial community in the <a href="https://team.inria.fr/microcosme/">MICROCOSME Team</a>.</p>
+<p> I am a Post-doctoral fellow working on methods to study the metabolism of organism and microbial community in the <a href="https://team.inria.fr/microcosme/">MICROCOSME Team</a>.</p>
 
 </div>
